traversal.snake.Snake.scala.error
Compilation error:
Snake:16: error: value est is not a member of object plm.universe.Direction
    if (getDirection()==Direction.est){
                                  ^Snake:24: error: value ouest is not a member of object plm.universe.Direction
    }else if (getDirection()==Direction.ouest){
                                        ^